--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,6 @@
 <ul class="heroes">
-  <li *ngIf="Let; hero: of; heroes">
-    <button type="button" (click)="onselect(hero)">
+  <li *ngFor="let hero of heroes">
+    <button type="button" (click)="onSelect(hero)">
       <span class="badge">{{ hero.id }}</span>
       <span class="name">{{ hero.name }}</span>
     </button>
