--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,3 +6,15 @@
     </button>
   </li>
 </ul>
+
+<!-- Selected HEro Templete -->
+<div class="selectedHero">
+  <h2>{{ selectedHero.name | uppercase }}Details</h2>
+
+  <div>id:{{ selectedHero.id }}</div>
+
+  <div>
+    <label for="hero-name"></label>
+    <input id="hero-name" [(ngModel)]="selectedHero.name" palceholder="name" />
+  </div>
+</div>
