--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,6 @@
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <button type="button" (click)="onSelect(hero)">
+    <button type="button" [class.selected="hero==selectedHero"] (click)="onSelect(hero)">
       <span class="badge">{{ hero.id }}</span>
       <span class="name">{{ hero.name }}</span>
     </button>
@@ -8,7 +8,7 @@
 </ul>
 
 <!-- Selected HEro Templete -->
-<div class="selectedHero">
+<div *ngIf="selectedHero">
   <h2>{{ selectedHero.name | uppercase }}Details</h2>
 
   <div>id:{{ selectedHero.id }}</div>
